--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -1,5 +1,5 @@
 @(publishers: Seq[Publisher])
-<div class="modal fade" id="editCampaign" tabindex="-1" role="dialog" aria-labelledby="editCampaign" aria-hidden="true">
+<div class="modal fade" id="editCampaign" tabindex="-1" role="dialog" aria-labelledby="editCampaign" aria-hidden="true" data-keyboard="false" data-backdrop="static">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
