--- a/app/views/parts/cookieedit.scala.html
+++ b/app/views/parts/cookieedit.scala.html
@@ -1,9 +1,9 @@
-<div class="modal fade" id="editAdmin" tabindex="-1" role="dialog" aria-labelledby="editAdmin" aria-hidden="true" data-keyboard="false" data-backdrop="static">
+<div class="modal fade" id="editCookie" tabindex="-1" role="dialog" aria-labelledby="editCookie" aria-hidden="true" data-keyboard="false" data-backdrop="static">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title">New/Edit Admin: <a href="#" id="adminname" data-bind="editable: currentadmin().name" data-type="text" data-pk="1" data-title="Enter Admin Name">New Admin</a></h4>
+				<h4 class="modal-title">New/Edit Cookie: <a href="#" id="adminname" data-bind="editable: currentcookie().name" data-type="text" data-pk="1" data-title="Enter Cookie Name">New Cookie</a></h4>
 			</div>
 			<div class="modal-body">
 			</div>
