add error handling

--- a/app/assets/stylesheets/bootstrap-theme.less
+++ b/app/assets/stylesheets/bootstrap-theme.less
@@ -84,6 +84,7 @@ a {color:@color-blue;}
 	border-color:@btn-primary-border;
 	color:@btn-primary-color;
 	&:hover,
+	&.zeroclipboard-is-hover,
 	&:focus {
 		background-color:@btn-primary-bg-hover;
 		border-color:@btn-primary-border-hover;
