--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -831,6 +831,20 @@ nav.loginbar {
   color: #468847;
 }
 
+.control-group.error,
+.control-group.warning{
+  position: relative;
+}
+.control-group.error .controls,
+.control-group.warning .controls {
+  display: block;
+  opacity: 0.9;
+  top: -0.5ex;
+}
+.popover-title span.help-block {
+  display: inline;
+}
+
 .control-group.success .form-control {
   border-color: #468847;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
