--- a/app/views/creatives.scala.html
+++ b/app/views/creatives.scala.html
@@ -19,7 +19,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-responsive">
-						<table class="table table-striped table-bordered data-table" data-bind="datatable: datatable, datatableScroller: datatablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'string' }, { sType: 'string' }, { sType: 'string' } ], rowClick: selectadmin }">
+						<table class="table table-striped table-bordered data-table" data-bind="datatable: datatable, datatableScroller: datatablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'string' }, { sType: 'string' }, { sType: 'string' } ], rowClick: selectcreative }">
 							<thead>
 								<tr>
 									<th class="sorting">Name</th>
@@ -42,6 +42,6 @@
 		</div>
 	</div>
 </div>
-@parts.adminedit
+@parts.creativeedit()
 @elements.modalalert("alert")
 }
