--- a/app/views/publishers.scala.html
+++ b/app/views/publishers.scala.html
@@ -19,7 +19,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-responsive">
-						<table class="table table-striped table-bordered data-table" data-bind="datatable: datatable, datatableScroller: datatablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'string' } ] }">
+						<table class="table table-striped table-bordered data-table" data-bind="datatable: datatable, datatableScroller: datatablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'string' } ], rowClick: selectpublisher }">
 							<thead>
 								<tr>
 									<th class="sorting">Name</th>
@@ -43,6 +43,6 @@
 		</div>
 	</div>
 </div>
-@parts.publisheredit
+@parts.publisheredit()
 @elements.modalalert("alert")
 }
