add other pages

--- a/app/views/creatives.scala.html
+++ b/app/views/creatives.scala.html
@@ -1,4 +1,4 @@
-@(creatives: Seq[Creative], current: Admin)
+@(creatives: Seq[Creative], publishers: Seq[Publisher], current: Admin)
 @templates.main("Creatives") {
 @menu.admin("Creatives")
 @menu.logout(current)
