--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -1,4 +1,4 @@
-@(admins: Seq[Admin], current: Admin)
+@(admins: Seq[Admin], publishers: Seq[Publisher], current: Admin)
 @templates.main("Admins") {
 @menu.admin("Admins")
 @menu.logout(current)
@@ -7,6 +7,7 @@
 	//<![CDATA[
 	window.data = {};
 	window.data.admins = @{import play.api.libs.json._;import controllers.AdminController.AdminFormat;Html(Json.toJson(admins).toString());}
+  window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());}
 	//]]>
 </script>
 } {
