--- a/app/views/cookies.scala.html
+++ b/app/views/cookies.scala.html
@@ -1,11 +1,12 @@
-@(cookies: Seq[models.Cookie], current: Admin)
+@(cookies: Seq[models.Cookie], publishers: Seq[Publisher], current: Admin)
 @templates.main("Cookies") {
 @menu.admin("Cookies")
 @menu.logout(current)
 @helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/cookies.js").url)
 <script type="text/javascript">
 	//<![CDATA[
-	window.data = {};
+  window.data = {};
+  window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());}
 	window.data.cookies = @{import play.api.libs.json._;import controllers.AdminController.CookieFormat;Html(Json.toJson(cookies).toString());}
 	//]]>
 </script>
