--- a/app/views/cookies.scala.html
+++ b/app/views/cookies.scala.html
@@ -1,7 +1,7 @@
 @(cookies: Seq[models.Cookie], publishers: Seq[Publisher], current: Admin)
 @templates.main("Cookies") {
 @menu.admin("Cookies")
-@menu.logout(current)
+@menu.logout(current, menu.publishers(publishers))
 @helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/cookies.js").url)
 <script type="text/javascript">
 	//<![CDATA[
