--- a/app/views/cookies.scala.html
+++ b/app/views/cookies.scala.html
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-responsive">
-						<table class="table table-striped table-bordered data-table" data-bind="datatable: datatable, datatableScroller: datatablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'string' }, { sType: 'string' }, { sType: 'string' } ], rowClick: selectcookie }">
+						<table class="table table-striped table-bordered data-table" data-bind="datatable: datatable, datatableScroller: datatablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'html' }, { sType: 'string' } ], rowClick: selectcookie }">
 							<thead>
 								<tr>
 									<th class="sorting">Name</th>
