fix cookie list

--- a/app/views/creatives.scala.html
+++ b/app/views/creatives.scala.html
@@ -23,6 +23,8 @@
 							<thead>
 								<tr>
 									<th class="sorting">Name</th>
+									<th class="sorting">State</th>
+									<th class="sorting">Variant</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -34,11 +36,6 @@
 			<div class="row">
 				@elements.pagination("datatablescroller")
 			</div>
-		</div>
-		<div class="col-md-3">
-			<p>
-				<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAdmin"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Admin</button>
-			</p>
 		</div>
 	</div>
 </div>
