--- a/app/views/parts/creativeedit.scala.html
+++ b/app/views/parts/creativeedit.scala.html
@@ -3,7 +3,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title">New/Edit Creative: <a href="#" id="adminname" data-bind="editable: currentadmin().name" data-type="text" data-pk="1" data-title="Enter Creative Name">New Creative</a></h4>
+				<h4 class="modal-title">New/Edit Creative: <a href="#" id="creativename" data-bind="editable: currentcreative().name" data-type="text" data-pk="1" data-title="Enter Creative Name">New Creative</a></h4>
 			</div>
 			<div class="modal-body">
 			</div>
