--- a/app/views/creatives.scala.html
+++ b/app/views/creatives.scala.html
@@ -6,6 +6,7 @@
 <script type="text/javascript">
 	//<![CDATA[
 	window.data = {};
+  window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());}
 	window.data.creatives = @{import play.api.libs.json._;import controllers.AdminController.CreativeFormat;Html(Json.toJson(creatives).toString());}
 	//]]>
 </script>
