--- a/app/views/cookies.scala.html
+++ b/app/views/cookies.scala.html
@@ -7,7 +7,7 @@
 	//<![CDATA[
   window.data = {};
   window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());}
-	window.data.cookies = @{import play.api.libs.json._;import controllers.AdminController.CookieFormat;Html(Json.toJson(cookies).toString());}
+	window.data.cookies = @{import play.api.libs.json._;import controllers.AdminController.CookieFormat;Html(Json.toJson(cookies).toString().replace("</","<\"+\"/"));}
 	//]]>
 </script>
 } {
