--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -45,9 +45,9 @@ body {
 }
 
 .navbar-default .navbar-brand {
-	background:url("/assets/images/logo-ae.png") no-repeat center center;
-	height:46px;
-	width:150px;
+	background:url("/assets/images/logo-ae.png") no-repeat center left;
+	height:50px;
+	width:170px;
 }
 .navbar-default .navbar-brand span {
 	display:none;
