--- a/app/views/cookies.scala.html
+++ b/app/views/cookies.scala.html
@@ -2,12 +2,13 @@
 @templates.main("Cookies") {
 @menu.admin("Cookies")
 @menu.logout(current, menu.publishers(publishers))
-@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/cookies.js").url)
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.RemoteAssets.at("javascripts/cookies.js").url)
 <script type="text/javascript">
 	//<![CDATA[
-  window.data = {};
-  window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());}
-	window.data.cookies = @{import play.api.libs.json._;import controllers.AdminController.CookieFormat;Html(Json.toJson(cookies).toString().replace("</","<\"+\"/"));}
+	window.data = {};
+	window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());};
+	window.data.cookies = @{import play.api.libs.json._;import controllers.AdminController.CookieFormat;Html(Json.toJson(cookies).toString().replace("</","<\"+\"/"));};
+	window.data.admin = {email:'@current.email',roles:@{import play.api.libs.json._;Html(Json.toJson(current.getRoles().asScala).toString());}};
 	//]]>
 </script>
 } {
