--- a/app/views/creatives.scala.html
+++ b/app/views/creatives.scala.html
@@ -2,12 +2,13 @@
 @templates.main("Creatives") {
 @menu.admin("Creatives")
 @menu.logout(current, menu.publishers(publishers))
-@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/creatives.js").url)
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.RemoteAssets.at("javascripts/creatives.js").url)
 <script type="text/javascript">
 	//<![CDATA[
 	window.data = {};
-  window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());}
-	window.data.creatives = @{import play.api.libs.json._;import controllers.AdminController.CreativeFormat;Html(Json.toJson(creatives).toString());}
+	window.data.publishers = @{import play.api.libs.json._;import controllers.PublisherController.PublisherFormat;Html(Json.toJson(publishers).toString());};
+	window.data.creatives = @{import play.api.libs.json._;import controllers.AdminController.CreativeFormat;Html(Json.toJson(creatives).toString());};
+	window.data.admin = {email:'@current.email',roles:@{import play.api.libs.json._;Html(Json.toJson(current.getRoles().asScala).toString());}};
 	//]]>
 </script>
 } {
