--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,7 +29,7 @@
 				<p>AudienceExtender helps Event Owners and Managers unleash the hidden revenue potential of their website visitors. Built specifically for B2B media companies by seasoned B2B media experts and advertising technology professionals.</p>
 			</div>
 			<div class="col-lg-6 col-md-5 visible-md visible-lg">
-				<div class="head-img"><img alt="" src="@routes.Assets.at("images/bg-head-pair.png")" /></div>
+				<div class="head-img"><img alt="" src="@routes.RemoteAssets.at("images/bg-head-pair.png")" /></div>
 			</div>
 		</div>
 	</div>
@@ -44,21 +44,21 @@
 					<h3>1. Get set up in less than 5 minutes...</h3>
 					<p>Place a small snippet of HTML on your website. Your website looks the same. No changes required or made to your content.</p>
 				</div>
-				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.Assets.at("images/how-it-works_01.png")" class="img-responsive" /></div>
+				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.RemoteAssets.at("images/how-it-works_01.png")" class="img-responsive" /></div>
 			</div>
 			<div class="row m-btm border-btm">
 				<div class="col-sm-8">
 					<h3>2. Share the new opportunity with your Exhibitors</h3>
 					<p>With Audience Extender you have another arrow in your quiver to help your sponsors, exhibitors, and advertisers enhance their brand and grow their client base. Our custom built sales tools will help you easily sell access to your audience, with very little work.</p>
 				</div>
-				<div class="col-sm-4"><img alt="" src="@routes.Assets.at("images/how-it-works_02.png")" class="img-responsive" /></div>
+				<div class="col-sm-4"><img alt="" src="@routes.RemoteAssets.at("images/how-it-works_02.png")" class="img-responsive" /></div>
 			</div>
 			<div class="row m-btm">
 				<div class="col-sm-8 col-sm-push-4">
 					<h3>3. Earn money in your sleep</h3>
 					<p>"Fire and Forget": because Audience Extender enables you to make money off your audience wherever they are online, you earn money without having to worry about a thing.</p>
 				</div>
-				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.Assets.at("images/how-it-works_03.png")" class="img-responsive" /></div>
+				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.RemoteAssets.at("images/how-it-works_03.png")" class="img-responsive" /></div>
 			</div>
 		</li>
 
@@ -70,7 +70,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<p class="text-center">
-						<img src="//s3-strikingly-production-v1.global.ssl.fastly.net/assets/themes/app/tag.png" alt="" />
+						<img src="@routes.RemoteAssets.at("images/tag.png")" alt="" />
 					</p>
 					<h3 class="text-center">AUTOMATED WORKFLOWS</h3>
 					<p class="text-center">( Ph D. not required )</p>
@@ -81,7 +81,7 @@
 				</div>
 				<div class="col-md-4">
 					<p class="text-center">
-						<img src="//s3-strikingly-production-v1.global.ssl.fastly.net/assets/themes/app/location.png" alt="" />
+						<img src="@routes.RemoteAssets.at("images/location.png")" alt="" />
 					</p>
 					<h3 class="text-center">SMART SALES TOOLS</h3>
 					<p class="text-center">( work less + earn more )</p>
@@ -92,7 +92,7 @@
 				</div>
 				<div class="col-md-4">
 					<p class="text-center">
-						<img src="//s3-strikingly-production-v1.global.ssl.fastly.net/assets/themes/app/heart.png" alt="" />
+						<img src="@routes.RemoteAssets.at("images/heart.png")" alt="" />
 					</p>
 					<h3 class="text-center">GUARANTEED PROFITS</h3>
 					<p class="text-center">( sleep better )</p>
