--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -28,7 +28,7 @@
 													<a href="javascript:void(0)" class="website-block" data-bind="click: $root.selectaudience, css: {'selected': selected(), 'active': active()}">
 														<span class="website-name" data-bind="text: name"></span>
 														<span class="thumbnail-site">
-															<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+															<img alt="" src="@routes.RemoteAssets.at("images/thumbnail-site.gif")" />
 															<span></span>
 														</span>
 														<span class="website-audience"><span data-bind="text: count">0</span> Users <span class="glyphicon glyphicon-eye-open"></span></span>
@@ -51,7 +51,7 @@
 										<a href="javascript:void(0)" class="website-block-add" data-bind="click: newpackage">
 											<span class="website-name">Add New Package</span>
 											<span class="thumbnail-site">
-												<img alt="" src="@routes.Assets.at("images/thumbnail-add.gif")" />
+												<img alt="" src="@routes.RemoteAssets.at("images/thumbnail-add.gif")" />
 											</span>
 										</a>
 									</div>
@@ -62,7 +62,7 @@
 													<a href="javascript:void(0)" class="website-block" data-bind="click: $root.selectpackage, css: {'selected': selected(), 'active': active()}">
 														<span class="website-name" data-bind="text: name"></span>
 														<span class="thumbnail-site">
-															<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+															<img alt="" src="@routes.RemoteAssets.at("images/thumbnail-site.gif")" />
 															<span></span>
 														</span>
 														<span class="website-audience"><span data-bind="text: count">0</span> Ad Impressions <span class="glyphicon glyphicon-eye-open"></span></span>
@@ -140,7 +140,7 @@
 					<div id="step2" class="step-pane">
 						<div class="box-drag-and-drop-banner text-center">
 							<h3>Drag and Drop Banner Here</h3>
-							<div><img src="@routes.Assets.at("images/banner-examples.png")" alt="" /></div>
+							<div><img src="@routes.RemoteAssets.at("images/banner-examples.png")" alt="" /></div>
 							<p>You can drag multiple images here. We don't accept folders or compressed (zip) items.</p>
 						</div>
 						<div class="actions text-center m-top">
@@ -156,7 +156,7 @@
 								<table class="table table-striped table-bordered table-vertical">
 									<tbody data-bind="foreach: currentcampaign().creatives">
 										<tr>
-											<td class="col-sm-2 col-xs-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" data-bind="attr: { 'src': url }"/></td>
+											<td class="col-sm-2 col-xs-4"><img src="@routes.RemoteAssets.at("images/tmp-banner-your-uploads.png")" alt="" data-bind="attr: { 'src': url }"/></td>
 											<td class="col-sm-10 col-xs-8">
 												<div class="row">
 													<div class="col-xs-12 col-sm-9" data-bind="text: name">
