--- a/app/views/templates/public.scala.html
+++ b/app/views/templates/public.scala.html
@@ -6,10 +6,10 @@
 	<title>@title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/bootstrap.css")">
-	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-theme.css")">
-	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
-@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/app.js").url)
+	<link rel="stylesheet" media="screen" href="@routes.RemoteAssets.at("stylesheets/main.css")">
+	<link rel="stylesheet" media="screen" href="@routes.RemoteAssets.at("stylesheets/bootstrap-theme.css")">
+	<link rel="shortcut icon" href="@routes.RemoteAssets.at("images/favicon.ico")">
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.RemoteAssets.at("javascripts/app.js").url)
 </head>
 <body>
 
