--- a/app/views/menu/login.scala.html
+++ b/app/views/menu/login.scala.html
@@ -1,4 +1,4 @@
-@helper.form(routes.MainController.authenticate, 'class -> "navbar-form navbar-right", 'role -> "form") {
+@helper.form(routes.MainController.authenticate, 'class -> "navbar-form navbar-right visible-lg", 'role -> "form") {
 <div class="form-group">
 	<input type="email" class="form-control" id="email" name="email" placeholder="Email">
 </div>
@@ -7,3 +7,8 @@
 </div>
 <button type="submit" class="btn btn-default" id="loginbutton">Login</button>
 }
+<ul class="nav navbar-nav navbar-right hidden-lg">
+	<li>
+		<a href="@routes.MainController.login()" class="navbar-link">Login</a>
+	</li>
+</ul>
