User menu fixed for small devices

--- a/app/views/menu/admin.scala.html
+++ b/app/views/menu/admin.scala.html
@@ -4,5 +4,5 @@
 	<li class="@if(active=="Creatives"){active}"><a href="@routes.AdminController.creatives">Creatives</a></li>
 	<li class="@if(active=="Cookies"){active}"><a href="@routes.AdminController.cookies">Cookies</a></li>
 	<li class="@if(active=="Publishers"){active}"><a href="@routes.PublisherController.publishers">Publishers</a></li>
-	<li class="@if(active=="Admins"){active}"><a href="@routes.AdminController.admins">Admins</a></li>
+	<li class="@if(active=="Admins"){active }hidden-sm"><a href="@routes.AdminController.admins">Admins</a></li>
 </ul>
