--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -10,8 +10,8 @@
 				<h3 class="m-null-top m-btm">Campaign Name: <a href="#" id="campaignename" data-bind="editable: currentcampaign().name" data-type="text" data-pk="1" data-title="Enter Campaign Name">New Campaign</a></h3>
 				<div class="wizard">
 					<ul class="steps">
-						<li data-target="#step1"><span class="badge badge-info">1</span>Step 1 <span data-bind="text: campaignstep.maxValue() > 1 ? '(completed)' : ''"></span><span class="chevron"></span></li>
-						<li data-target="#step2"><span class="badge">2</span>Step 2 <span data-bind="text: campaignstep.maxValue() > 2 ? '(completed)' : ''"></span><span class="chevron"></span></li>
+						<li data-target="#step1"><span class="badge badge-info">1</span>Step 1<span class="chevron"></span></li>
+						<li data-target="#step2"><span class="badge">2</span>Step 2<span class="chevron"></span></li>
 						<li data-target="#step3"><span class="badge">3</span>Step 3<span class="chevron"></span></li>
 					</ul>
 				</div>
