--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -25,13 +25,13 @@
 		<div class="form-group">
 			<label for="email" class="col-sm-2 control-label">Email</label>
 			<div class="col-sm-10">
-				<input type="email" autofocus="" required="" placeholder="Email" class="form-control" id="email" name="email" value="@form("email").value">
+				<input type="email" autofocus="" required placeholder="Email" class="form-control" id="email" name="email" value="@form("email").value">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="msg" class="col-sm-2 control-label">Message</label>
 			<div class="col-sm-10">
-				<textarea placeholder="Message" required="" class="form-control" id="msg" name="msg">@form("msg").value</textarea>
+				<textarea placeholder="Message" required class="form-control" id="msg" name="msg">@form("msg").value</textarea>
 			</div>
 		</div>
 		<div class="form-group">
