--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -134,13 +134,13 @@
 				<div class="form-group">
 					<label for="email" class="col-sm-2 control-label">Email</label>
 					<div class="col-sm-10">
-						<input type="email" required="" placeholder="Email" class="form-control" id="email" name="email" value="">
+						<input type="email" required placeholder="Email" class="form-control" id="email" name="email" value="">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="msg" class="col-sm-2 control-label">Message</label>
 					<div class="col-sm-10">
-						<textarea placeholder="Message" required="" class="form-control" id="msg" name="msg"></textarea>
+						<textarea placeholder="Message" required class="form-control" id="msg" name="msg"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
