--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -126,25 +126,22 @@
 			<p class="text-center">Call us at <strong>+1 (917) 934-3019</strong> or fill in the below form and we'll get back to you.</p>
 @helper.form(routes.MainController.sendMessage, 'class -> "form-horizontal form-contact", 'role -> "form") {
 				<div class="form-group">
-					<label for="name" class="col-sm-2 control-label">Name</label>
-					<div class="col-sm-10">
-						<input type="text" placeholder="Name" class="form-control" id="name" name="name" value="">
+					<div class="col-sm-offset-2 col-sm-8">
+						<input class="form-control" required type="text" placeholder="Name" id="name" name="name" value="">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="email" class="col-sm-2 control-label">Email</label>
-					<div class="col-sm-10">
-						<input type="email" required placeholder="Email" class="form-control" id="email" name="email" value="">
+					<div class="col-sm-offset-2 col-sm-8">
+						<input class="form-control" required type="email" placeholder="Email" id="email" name="email" value="">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="msg" class="col-sm-2 control-label">Message</label>
-					<div class="col-sm-10">
-						<textarea placeholder="Message" required class="form-control" id="msg" name="msg"></textarea>
+					<div class="col-sm-offset-2 col-sm-8">
+						<textarea class="form-control" required placeholder="Message" id="msg" name="msg"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
+					<div class="col-sm-offset-2 col-sm-8">
 						<button type="submit" class="btn btn-primary" id="sendbutton">Send Message</button>
 					</div>
 				</div>
