--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -39,23 +39,26 @@
 	<ul class="list-unstyled slides">
 		<li>
 			<a name="howitworks"></a>
-			<div class="row m-btm border-btm">
+			<div class="row m-btm border-all">
 				<div class="col-sm-8 col-sm-push-4">
-					<h3>1. Get set up in less than 5 minutes...</h3>
+					<h3 class="big-number">1</h3>
+					<h3 class="howitworks-title"><span>1. </span>Get set up in less than 5 minutes...</h3>
 					<p>Place a small snippet of HTML on your website. Your website looks the same. No changes required or made to your content.</p>
 				</div>
 				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.RemoteAssets.at("images/how-it-works_01.png")" class="img-responsive" /></div>
 			</div>
-			<div class="row m-btm border-btm">
+			<div class="row m-btm border-all">
 				<div class="col-sm-8">
-					<h3>2. Share the new opportunity with your Exhibitors</h3>
+					<h3 class="big-number">2</h3>
+					<h3 class="howitworks-title"><span>2. </span>Share the new opportunity with your Exhibitors</h3>
 					<p>With Audience Extender you have another arrow in your quiver to help your sponsors, exhibitors, and advertisers enhance their brand and grow their client base. Our custom built sales tools will help you easily sell access to your audience, with very little work.</p>
 				</div>
 				<div class="col-sm-4"><img alt="" src="@routes.RemoteAssets.at("images/how-it-works_02.png")" class="img-responsive" /></div>
 			</div>
-			<div class="row m-btm">
+			<div class="row m-btm border-all">
 				<div class="col-sm-8 col-sm-push-4">
-					<h3>3. Earn money in your sleep</h3>
+					<h3 class="big-number">3</h3>
+					<h3 class="howitworks-title"><span>3. </span>Earn money in your sleep</h3>
 					<p>"Fire and Forget": because Audience Extender enables you to make money off your audience wherever they are online, you earn money without having to worry about a thing.</p>
 				</div>
 				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.RemoteAssets.at("images/how-it-works_03.png")" class="img-responsive" /></div>
