--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -127,7 +127,7 @@
 			<h2 class="text-center">Let's monetize together</h2>
 			<p class="text-center">Reach out today, and find out what you could be earning tomorrow.</p>
 			<p class="text-center">Call us at <strong>+1 (917) 934-3019</strong> or fill in the below form and we'll get back to you.</p>
-@helper.form(routes.MainController.sendMessage, 'class -> "form-horizontal form-contact", 'role -> "form") {
+@helper.form(routes.MainController.sendMessage, 'class -> "form-horizontal form-contact", 'role -> "form", 'novalidate -> "") {
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-8">
 						<input class="form-control" required type="text" placeholder="Name" id="name" name="name" value="">
