add missing warnings

--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -115,10 +115,10 @@
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newaudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: showyieldmaximizer"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> AD Packages</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: showadpackages"><span></span><span class="glyphicon glyphicon-plus-sign"></span> AD Packages</button>
 				</p>
 			</div>
 		</div>
