--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -31,7 +31,7 @@
 									</span>
 								</a>
 							</div>
-							<div class="jcarousel-wrapper with-add-block">
+							<div class="jcarousel-wrapper with-add-block" data-bind="fadeVisible: currentwebsites().length!=0">
 								<div class="jcarousel" data-bind="carousel: websiteposition">
 									<ul data-bind="foreach: currentwebsites">
 										<li>
