--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -134,10 +134,10 @@
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newcampaign" data-toggle="modal" data-target="#editCampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: showyieldmaximizer"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> AD Packages</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: showadpackages"><span></span><span class="glyphicon glyphicon-plus-sign"></span> AD Packages</button>
 				</p>
 			</div>
 		</div>
