--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -131,7 +131,7 @@
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newcampaign" data-toggle="modal" data-target="#editCampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newcampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: showyieldmaximizer"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
