--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,6 +1,6 @@
 @(form: play.api.data.Form[(String,String)])(implicit flash: play.api.mvc.Flash) 
 @templates.public("Login") { } {
-@helper.form(routes.MainController.authenticate, 'class -> "form-signin") {
+@helper.form(routes.MainController.authenticate, 'class -> "form-signin", 'novalidate -> "true") {
 	<h2 class="form-signin-heading">Please sign in</h2>
 
 	@form.globalError.map { error =>
@@ -9,8 +9,8 @@
 	@flash.get("success").map { message =>
 	<div class="alert alert-success">@message</div>
 	}
-	<input type="email" autofocus="" required placeholder="Email" class="form-control" id="email" name="email" value="@form("email").value">
-	<input type="password" required placeholder="Password" class="form-control" id="password" name="password">
+	<input type="email" autofocus="" required placeholder="Email" class="form-control @{if(form.error("email")){"has-warning"}}" id="email" name="email" value="@form("email").value">
+	<input type="password" required placeholder="Password" class="form-control @{if(form.error("password")){"has-warning"}}" id="password" name="password">
 	<button type="submit" class="btn btn-lg btn-primary btn-block" id="loginbutton">Sign in</button>
 	<p>
 		<a href="#" data-toggle="modal" data-target="#forgottenPassword">Password forgotten</a>
@@ -24,7 +24,7 @@
 				<h4 class="modal-title">Forgot password</h4>
 			</div>
 			<div class="modal-body">
-@helper.form(routes.MainController.forgotPassword, 'class -> "form-horizontal") {
+@helper.form(routes.MainController.forgotPassword, 'class -> "form-horizontal", 'novalidate -> "true") {
 				<div class="form-group">
 					<label for="email" class="col-sm-2 control-label">Email</label>
 					<div class="col-sm-10">
