--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -512,6 +512,8 @@ th {
 	}
 	.border-all {
 		border:1px solid #dfdfdf;
+		margin-left:5px;
+		margin-right:5px;
 		padding:20px;
 		.rounded-corners;
 	}
